// Vitest Snapshot v1

exports[`should render external link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link"
    href="https://test.com"
  />
</DocumentFragment>
`;

exports[`should render internal link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link"
    href="/a"
  />
</DocumentFragment>
`;

exports[`should render no-style link 1`] = `
<DocumentFragment>
  <a
    href="/a"
  />
</DocumentFragment>
`;
